Update CV and porto

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 body {
   height: 100vh;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   background: #f2f2f2;
 }
 
@@ -23,42 +23,30 @@ a {
   padding: 1em;
   background: white;
 }
-
 .navbar .logo {
   font-weight: bold;
   color: black;
   font-size: 1.2em;
 }
-
 .navbar .logo span {
   color: var(--primary-color);
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   padding: 0.5em;
 }
-
 header nav {
   float: right;
 }
-
 header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 header nav ul a {
   display: block;
   padding: 0 1em;
 }
-
 header nav ul a:hover {
   font-weight: bold;
 }
@@ -83,21 +71,17 @@ section {
   color: black;
   margin-bottom: 0.2em;
 }
-
 .content p, .content-ab p {
   font-size: 24px;
   color: #6c6c6c;
-  line-height: .5em;
+  line-height: 0.5em;
 }
-
 .content span, .content-ab span {
   color: var(--primary-color);
 }
-
 .content .about-cta, .content-ab .about-cta {
   margin-top: 2.5em;
 }
-
 .content .primary-cta, .content-ab .primary-cta {
   color: var(--primary-color);
   background: white;
@@ -106,7 +90,6 @@ section {
   padding: 0.4em 1.3em;
   border-radius: 5em;
 }
-
 .content .primary-cta:hover, .content-ab .primary-cta:hover {
   background: var(--primary-color);
   color: white;
@@ -119,66 +102,48 @@ section {
   border-radius: 1em;
   margin-bottom: 2em;
 }
-
 .featured-work .work-container {
-  display: -ms-grid;
   display: grid;
   margin: 0;
-  -ms-grid-columns: (minmax(19rm, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(19rm, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(19rm, 1fr));
   position: relative;
   place-content: center;
 }
-
 .featured-work .img-project {
   width: 400px;
   padding: 0.5em;
 }
-
 .featured-work .img-project:hover {
   opacity: 0.5;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .right-col-ab {
   padding: 0 4em;
 }
-
 .right-col-ab .title {
   text-align: left;
 }
-
 .right-col-ab .desc {
   font-size: 18px;
   line-height: 1.4em;
   text-align: left;
 }
-
 .right-col-ab .contact-me {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .right-col-ab .contact-me p {
   color: black;
   text-align: left;
   padding: 0 inherit;
 }
-
 .right-col-ab .contact-me .desc {
   margin-top: -0.5em;
   text-align: left;
   padding: 0 inherit;
 }
-
 .right-col-ab .contact-me ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -188,7 +153,6 @@ section {
   padding-bottom: 3em;
   font-size: 24px;
 }
-
 .footer a {
   color: var(--primary-color);
 }
@@ -198,13 +162,10 @@ section {
     margin: auto 12em;
   }
   .work-container {
-    display: -ms-grid;
     display: grid;
     place-content: space-between;
   }
   .work-container ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   .work-container ul .img-project {
@@ -214,15 +175,10 @@ section {
     padding: 0 11em;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .content-ab {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .content-ab .left-col-ab {
     margin-top: 8em;
@@ -232,5 +188,4 @@ section {
     margin-top: 1em;
     padding: 0 12em 0 4em;
   }
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
