--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,17 @@ section {
   opacity: 0.5;
   transition: 0.5s ease;
 }
+.featured-work .img-project:hover + .hide {
+  display: block;
+}
+.featured-work .hide {
+  display: none;
+  position: relative;
+  z-index: 11;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
 
 .right-col-ab {
   padding: 0 4em;
