--- a/css/main.scss
+++ b/css/main.scss
@@ -132,7 +132,21 @@ section {
             opacity: 0.5;
             transition: .5s ease;
         }
+
+        &:hover + .hide {
+            display:block;
+        }
     }
+
+    .hide {
+        display: none;
+        position: relative;
+        z-index: 11;
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+
+      }
 }
 
 .right-col-ab{
