--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,42 @@ section {
   color: white;
 }
 
+#projects {
+  font-family: "Poppins";
+  position: relative;
+  text-align: center;
+}
+#projects .experience-details-container {
+  display: flex;
+  flex-direction: column;
+}
+#projects .project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+#projects .title {
+  font-size: 2.5em;
+  line-height: 4.3em;
+  margin-top: 3em;
+  font-size: 36px;
+  color: black;
+  margin-bottom: 1.2em;
+}
+
+.project-cta {
+  color: var(--primary-color);
+  background: white;
+  border: 1px solid var(--primary-color);
+  font-size: 18px;
+  padding: 0.4em 1.3em;
+  border-radius: 5em;
+}
+.project-cta:hover {
+  background: var(--primary-color);
+  color: white;
+}
+
 .featured-work {
   display: block;
   padding: 1em;
@@ -198,5 +234,8 @@ section {
   .content-ab .right-col-ab {
     margin-top: 1em;
     padding: 0 12em 0 4em;
+  }
+  #projects .experience-details-container {
+    flex-direction: row;
   }
 }/*# sourceMappingURL=main.css.map */
