--- a/css/main.scss
+++ b/css/main.scss
@@ -109,6 +109,44 @@ section {
     }
 }
 
+#projects{
+    font-family: 'Poppins';
+    
+    position: relative;
+    text-align: center;
+    .experience-details-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .project-img{
+        border-radius: 2rem;
+        width: 90%;
+        height: 90%;
+    }
+    .title{
+        font-size: 2.5em;
+        line-height: 4.3em;
+        margin-top: 3em;
+        font-size: 36px;
+        color: black;
+        margin-bottom: 1.2em;
+    }
+}
+
+.project-cta {
+    color: var(--primary-color);
+    background: white;
+    border: 1px solid var(--primary-color);
+    font-size: 18px;
+    padding: 0.4em 1.3em;
+    border-radius: 5em;
+
+    &:hover {
+        background: var(--primary-color);
+        color: white;
+    }
+}
+
 .featured-work {
     display: block;
     padding: 1em;
@@ -231,6 +269,12 @@ section {
             padding: 0 12em 0 4em;
         }
 
+    }
+
+    #projects{
+        .experience-details-container{
+            flex-direction: row;
+        }
     }
     
 }
