--- a/css/main.css
+++ b/css/main.css
@@ -94,11 +94,17 @@ section {
   background: var(--primary-color);
   color: white;
 }
+.content .left-col-ab, .content-ab .left-col-ab {
+  margin-top: 2em;
+}
 
 #projects {
   font-family: "Poppins";
   position: relative;
   text-align: center;
+}
+#projects .article-container {
+  margin-top: 2em;
 }
 #projects .experience-details-container {
   display: flex;
@@ -228,12 +234,12 @@ section {
     justify-content: space-between;
   }
   .content-ab .left-col-ab {
-    margin-top: 8em;
-    padding: 0 0 0 13em;
+    margin-top: 5em;
+    padding: 0 0 0 3em;
   }
   .content-ab .right-col-ab {
     margin-top: 1em;
-    padding: 0 12em 0 4em;
+    padding: 0 8em 0 4em;
   }
   #projects .experience-details-container {
     flex-direction: row;
